--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,8 @@
   },
   "homepage": "https://github.com/appacademy-starters/routing-roundup-starter#readme",
   "dependencies": {
-    "mocha": "^7.1.1"
+    "express": "^4.17.1",
+    "mocha": "^7.1.1",
+    "pug": "^3.0.0"
   }
 }
